# promptlab

./: .dockerignore  .gitignore  .venv  ANALYSIS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_REVIEW.md  LICENSE  PLAN.md  README.md  SECURITY.md  VALIDATION.md  docker-compose.yml  pyproject.toml  sbom.json
.github/workflows/: ci.yml
.nyc_output/processinfo/: 4f309f45-950b-43ee-8d98-f027daf60929.json  index.json
docs/: guide.md  use-cases.md
examples/: hello.yaml
src/promptlab/: __init__.py  __main__.py  chain.py  cli.py  providers.py  runner.py  scorer.py  scoring.py  storage.py  template.py
src/promptlab/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  sync.py
tests/: conftest.py  test_coverage.py  test_e2e.py  test_feature_validation.py  test_integration.py  test_promptlab.py  test_providers.py  test_runner.py
