[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlab"
version = "0.1.0"
description = "Prompt engineering toolkit. Version-controlled prompt templates with variable interpolation, A/B testing across models (OpenAI, Anthropic, Ollama), response scoring/evaluation metrics (latency, cost, quality rubrics), prompt chain composition, CLI + REST API. Python CLI tool."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.scripts]
promptlab = "promptlab.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.30", "openai>=1.0"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-PyYAML", "bandit"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
